--- a/index.html
+++ b/index.html
@@ -33,25 +33,26 @@
     }
     .wrap{
       max-width:1220px;
-      margin:28px auto 40px;
-      padding:0 16px;
+      margin:22px auto 40px;
+      padding:0 14px;
     }
     .header{
       display:flex;
       align-items:flex-end;
       justify-content:space-between;
-      gap:16px;
-      margin-bottom:14px;
+      gap:12px;
+      margin-bottom:12px;
       flex-wrap:wrap;
     }
     .title{
       display:flex;
       flex-direction:column;
       gap:6px;
+      min-width: 260px;
     }
     .title h1{
       margin:0;
-      font-weight:800;
+      font-weight:850;
       letter-spacing:.2px;
       font-size:22px;
       line-height:1.1;
@@ -60,7 +61,7 @@
       color:var(--muted);
       font-size:13px;
       display:flex;
-      gap:10px;
+      gap:8px;
       flex-wrap:wrap;
       align-items:center;
     }
@@ -90,7 +91,8 @@
     }
     .search{
       position:relative;
-      width:min(360px, 90vw);
+      width:min(380px, 92vw);
+      flex: 1 1 280px;
     }
     .search input{
       width:100%;
@@ -119,6 +121,7 @@
       color:var(--text);
       cursor:pointer;
       user-select:none;
+      white-space:nowrap;
     }
     .btn:hover{ border-color: rgba(255,255,255,.18) }
     .btn:active{ transform: translateY(1px) }
@@ -135,6 +138,7 @@
       overflow:hidden;
     }
 
+    /* Desktop table */
     table{ width:100%; border-collapse:collapse; }
     thead th{
       text-align:left;
@@ -164,7 +168,7 @@
     .row.open{ background: rgba(210,20,4,.06); }
 
     .rank{ font-family:var(--mono); width:60px; }
-    .name{ font-weight:800; letter-spacing:.2px; }
+    .name{ font-weight:850; letter-spacing:.2px; }
     .muted{ color:var(--muted); font-size:12px; }
     .num{ font-family:var(--mono); text-align:right; }
     .num.left{ text-align:left; }
@@ -222,6 +226,13 @@
       border-radius:999px;
       border:1px solid rgba(255,255,255,.10);
       background: rgba(17,24,39,.55);
+      white-space:nowrap;
+    }
+
+    /* Desktop: detail table scrolls horizontally if needed */
+    .detailScroll{
+      overflow:auto;
+      -webkit-overflow-scrolling: touch;
     }
 
     .miniTable thead th{
@@ -229,12 +240,13 @@
       background: rgba(0,0,0,.10);
       padding:10px 12px;
       font-size:11px;
+      white-space:nowrap;
     }
     .miniTable tbody td{
       padding:10px 12px;
       font-size:13px;
       border-bottom:1px solid rgba(255,255,255,.07);
-      white-space:normal;
+      white-space:nowrap;
     }
 
     /* GOLD WIN STYLE */
@@ -255,9 +267,10 @@
     .winGold .trophy{ font-size:13px; line-height:1; }
 
     .selection{
-      font-weight:800;
+      font-weight:850;
       letter-spacing:.2px;
       color:#f1f5f9;
+      white-space:nowrap;
     }
 
     .foot{
@@ -270,20 +283,171 @@
       flex-wrap:wrap;
     }
 
-    @media (max-width: 980px){
-      .num{ text-align:left; }
-      thead{ display:none; }
-      tbody tr.row td{
+    /* ===== Mobile-first improvements =====
+       - Standings become "cards" per row with key stats
+       - Details become vertical cards per race (no squished table)
+    */
+    .mobileOnly{ display:none; }
+    .desktopOnly{ display:table; }
+
+    @media (max-width: 920px){
+      .wrap{ padding:0 12px; }
+      .title h1{ font-size:20px; }
+      .controls{ width:100%; justify-content:flex-start; }
+      .btn{ padding:10px 10px; }
+    }
+
+    @media (max-width: 720px){
+      .desktopOnly{ display:none; }
+      .mobileOnly{ display:block; }
+
+      .card{ border-radius: 16px; }
+
+      /* Standings list (mobile cards) */
+      .list{
+        display:flex;
+        flex-direction:column;
+      }
+      .mRow{
+        padding:12px 12px;
+        border-bottom:1px solid rgba(255,255,255,.07);
+        cursor:pointer;
+        background: rgba(0,0,0,.05);
+      }
+      .mRow:hover{ background: rgba(255,255,255,.03); }
+      .mRow.open{ background: rgba(210,20,4,.08); }
+
+      .mTop{
+        display:flex;
+        align-items:center;
+        justify-content:space-between;
+        gap:10px;
+      }
+      .mLeft{
+        display:flex;
+        align-items:center;
+        gap:10px;
+        min-width:0;
+      }
+      .mRank{
+        font-family:var(--mono);
+        font-weight:800;
+        width:40px;
+        height:32px;
+        display:grid;
+        place-items:center;
+        border-radius:10px;
+        border:1px solid rgba(255,255,255,.10);
+        background: rgba(17,24,39,.55);
+      }
+      .mName{
+        min-width:0;
+      }
+      .mName .name{
+        font-size:15px;
+        line-height:1.1;
+        white-space:nowrap;
+        overflow:hidden;
+        text-overflow:ellipsis;
+        max-width: 210px;
+      }
+      .mName .muted{
+        margin-top:4px;
+        font-size:12px;
+        white-space:nowrap;
+        overflow:hidden;
+        text-overflow:ellipsis;
+      }
+      .mChev{
+        font-size:22px;
+        line-height:1;
+        opacity:.9;
+        transform: rotate(0deg);
+        transition: transform .15s ease;
+      }
+      .mRow.open .mChev{ transform: rotate(90deg); }
+
+      .mStats{
+        margin-top:10px;
         display:grid;
         grid-template-columns: 1fr 1fr;
-        gap:6px 12px;
-        padding:12px 12px;
-        white-space:normal;
+        gap:8px;
       }
-      tbody tr.row td.rank{ grid-column:1 / -1; }
-      tbody tr.row td.chev{ grid-column:1 / -1; text-align:left; }
-      tbody tr.detail td{ padding:12px; }
-      tbody td{ white-space:normal; }
+      .mStat{
+        border:1px solid rgba(255,255,255,.10);
+        background: rgba(17,24,39,.45);
+        border-radius:12px;
+        padding:8px 10px;
+        display:flex;
+        align-items:baseline;
+        justify-content:space-between;
+        gap:10px;
+      }
+      .mStat .k{ color:var(--muted); font-size:11px; text-transform:uppercase; letter-spacing:.08em; }
+      .mStat .v{ font-family:var(--mono); font-weight:800; }
+
+      .mDetail{
+        display:none;
+        margin-top:12px;
+        padding-top:12px;
+        border-top:1px dashed rgba(255,255,255,.14);
+      }
+      .mDetail.open{ display:block; }
+
+      .raceCard{
+        border:1px solid rgba(255,255,255,.10);
+        background: rgba(15,23,42,.55);
+        border-radius:14px;
+        padding:12px;
+        margin-bottom:10px;
+      }
+      .raceHead{
+        display:flex;
+        align-items:flex-start;
+        justify-content:space-between;
+        gap:10px;
+      }
+      .raceTitle{
+        min-width:0;
+      }
+      .raceTitle .track{
+        font-weight:850;
+        font-size:14px;
+        white-space:nowrap;
+        overflow:hidden;
+        text-overflow:ellipsis;
+        max-width: 250px;
+      }
+      .raceTitle .meta{
+        margin-top:4px;
+        color:var(--muted);
+        font-family:var(--mono);
+        font-size:12px;
+      }
+      .pick{
+        margin-top:10px;
+        font-weight:900;
+        letter-spacing:.2px;
+        font-size:14px;
+      }
+      .raceGrid{
+        margin-top:10px;
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        gap:8px;
+      }
+      .raceChip{
+        border:1px solid rgba(255,255,255,.10);
+        background: rgba(17,24,39,.45);
+        border-radius:12px;
+        padding:8px 10px;
+        display:flex;
+        align-items:baseline;
+        justify-content:space-between;
+        gap:10px;
+      }
+      .raceChip .k{ color:var(--muted); font-size:11px; text-transform:uppercase; letter-spacing:.08em; }
+      .raceChip .v{ font-family:var(--mono); font-weight:900; }
     }
   </style>
 </head>
@@ -294,7 +458,7 @@
       <div class="title">
         <h1>Fantasy NASCAR League — Standings</h1>
         <div class="sub">
-          <span class="pill"><span class="dot"></span> Click a row to expand driver selections</span>
+          <span class="pill"><span class="dot"></span> Tap a row to expand selections</span>
           <span class="pill" id="lastUpdated">Updated: —</span>
         </div>
       </div>
@@ -305,14 +469,15 @@
             <path d="M21 21l-4.3-4.3m1.3-5.2a7 7 0 11-14 0 7 7 0 0114 0z"
                   stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           </svg>
-          <input id="q" type="text" placeholder="Search fantasy name (e.g., Tayhan)..." />
+          <input id="q" type="text" placeholder="Search fantasy name..." />
         </div>
         <button class="btn" id="collapseAll">Collapse all</button>
         <button class="btn primary" id="expandTop3">Expand top 3</button>
       </div>
     </div>
 
-    <div class="card">
+    <!-- DESKTOP TABLE -->
+    <div class="card desktopOnly">
       <table id="board" aria-label="Standings board">
         <thead>
           <tr>
@@ -333,9 +498,14 @@
       </table>
     </div>
 
+    <!-- MOBILE LIST -->
+    <div class="card mobileOnly">
+      <div id="mList" class="list" aria-label="Standings list"></div>
+    </div>
+
     <div class="foot">
-      <div>Tip: click headers to sort • search filters live</div>
-      <div style="font-family:var(--mono)">HTML + CSS + vanilla JS (no dependencies)</div>
+      <div>Tip: desktop = sortable table • mobile = card layout</div>
+      <div style="font-family:var(--mono)">HTML + CSS + vanilla JS</div>
     </div>
   </div>
 
@@ -409,6 +579,7 @@ const detailByName = details.reduce((acc, row) => {
  *  UI state
  * ========================= */
 const tbody = document.getElementById("tbody");
+const mList = document.getElementById("mList");
 const q = document.getElementById("q");
 const lastUpdated = document.getElementById("lastUpdated");
 lastUpdated.textContent = "Updated: " + new Date().toLocaleString();
@@ -480,15 +651,17 @@ function expandTop3(){
   render();
 }
 
-function render(){
-  const filtered = standings
+function getFilteredSortedStandings(){
+  return standings
     .filter(r => r.FANTASY_NAME.toLowerCase().includes(state.filter.toLowerCase()))
     .slice()
     .sort((a,b) => {
       const d = cmp(a,b);
       return state.sortDir === "asc" ? d : -d;
     });
+}
 
+function renderDesktopRows(filtered){
   tbody.innerHTML = "";
 
   for (const row of filtered){
@@ -552,48 +725,50 @@ function render(){
             <div class="muted">Click again to collapse</div>
           </div>
 
-          <table class="miniTable" aria-label="${escapeHtml(row.FANTASY_NAME)} selections">
-            <thead>
-              <tr>
-                <th>Track ID</th>
-                <th>Track</th>
-                <th>Selection</th>
-                <th class="num">Finish Position</th>
-                <th class="num">Points Earned Including Bonuses</th>
-                <th class="num">Win</th>
-                <th class="num">Top5</th>
-                <th class="num">Top10</th>
-                <th class="num">Led Lap</th>
-                <th class="num">Most Led</th>
-              </tr>
-            </thead>
-            <tbody>
-              ${
-                detailsFor.length
-                ? detailsFor.map(x => `
-                    <tr>
-                      <td class="num left">${x.TRACK_ID}</td>
-                      <td>${escapeHtml(x.TRACK_NAME)}</td>
-                      <td><span class="selection">${escapeHtml(x.SELECTION)}</span></td>
-                      <td class="num">${x.FINISH_POSITION}</td>
-                      <td class="num">${x.POINTS_EARNED}</td>
-                      <td class="num">
-                        ${
-                          Number(x.WIN) === 1
-                            ? `<span class="winGold"><span class="trophy">🏆</span>WIN</span>`
-                            : `<span style="font-family:var(--mono);color:var(--muted)">0</span>`
-                        }
-                      </td>
-                      <td class="num">${x.TOP5}</td>
-                      <td class="num">${x.TOP10}</td>
-                      <td class="num">${x.LED_LAP}</td>
-                      <td class="num">${x.LED_MOST}</td>
-                    </tr>
-                  `).join("")
-                : `<tr><td colspan="10" class="muted">No selections found.</td></tr>`
-              }
-            </tbody>
-          </table>
+          <div class="detailScroll" aria-label="${escapeHtml(row.FANTASY_NAME)} selections scroll">
+            <table class="miniTable" aria-label="${escapeHtml(row.FANTASY_NAME)} selections">
+              <thead>
+                <tr>
+                  <th>Track ID</th>
+                  <th>Track</th>
+                  <th>Selection</th>
+                  <th class="num">Finish</th>
+                  <th class="num">Points (Incl. Bonus)</th>
+                  <th class="num">Win</th>
+                  <th class="num">Top5</th>
+                  <th class="num">Top10</th>
+                  <th class="num">Led Lap</th>
+                  <th class="num">Most Led</th>
+                </tr>
+              </thead>
+              <tbody>
+                ${
+                  detailsFor.length
+                  ? detailsFor.map(x => `
+                      <tr>
+                        <td class="num left">${x.TRACK_ID}</td>
+                        <td>${escapeHtml(x.TRACK_NAME)}</td>
+                        <td><span class="selection">${escapeHtml(x.SELECTION)}</span></td>
+                        <td class="num">${x.FINISH_POSITION}</td>
+                        <td class="num">${x.POINTS_EARNED}</td>
+                        <td class="num">
+                          ${
+                            Number(x.WIN) === 1
+                              ? `<span class="winGold"><span class="trophy">🏆</span>WIN</span>`
+                              : `<span style="font-family:var(--mono);color:var(--muted)">0</span>`
+                          }
+                        </td>
+                        <td class="num">${x.TOP5}</td>
+                        <td class="num">${x.TOP10}</td>
+                        <td class="num">${x.LED_LAP}</td>
+                        <td class="num">${x.LED_MOST}</td>
+                      </tr>
+                    `).join("")
+                  : `<tr><td colspan="10" class="muted">No selections found.</td></tr>`
+                }
+              </tbody>
+            </table>
+          </div>
         </div>
       </td>
     `;
@@ -601,7 +776,84 @@ function render(){
   }
 }
 
-/** Sorting */
+function renderMobileList(filtered){
+  mList.innerHTML = "";
+
+  for (const row of filtered){
+    const isOpen = state.open.has(row.FANTASY_NAME);
+    const behind = formatBehind(row.POINTS_BEHIND);
+    const detailsFor = (detailByName[row.FANTASY_NAME] || []).slice()
+      .sort((a,b)=>a.TRACK_ID - b.TRACK_ID);
+
+    const container = document.createElement("div");
+    container.className = "mRow" + (isOpen ? " open" : "");
+    container.setAttribute("role","button");
+    container.setAttribute("tabindex","0");
+    container.addEventListener("click", () => toggle(row.FANTASY_NAME));
+    container.addEventListener("keydown", (e) => {
+      if (e.key === "Enter" || e.key === " "){ e.preventDefault(); toggle(row.FANTASY_NAME); }
+    });
+
+    container.innerHTML = `
+      <div class="mTop">
+        <div class="mLeft">
+          <div class="mRank">${row.RANK}</div>
+          <div class="mName">
+            <div class="name">${escapeHtml(row.FANTASY_NAME)}</div>
+            <div class="muted">${behind.text} • Points ${row.TOTAL_POINTS_INCLUDING_BONUS} • Starts ${row.STARTS}</div>
+          </div>
+        </div>
+        <div class="mChev">›</div>
+      </div>
+
+      <div class="mStats">
+        <div class="mStat"><div class="k">Wins</div><div class="v">${row.WINS}</div></div>
+        <div class="mStat"><div class="k">Top 5</div><div class="v">${row.TOP_5s}</div></div>
+        <div class="mStat"><div class="k">Top 10</div><div class="v">${row.TOP_10s}</div></div>
+        <div class="mStat"><div class="k">Led ≥1 Lap</div><div class="v">${row.LED_AT_LEAST_ONE_LAP_IN_RACE}</div></div>
+        <div class="mStat"><div class="k">Most Laps Led</div><div class="v">${row.LED_MOST_LAPS_IN_A_RACE}</div></div>
+        <div class="mStat"><div class="k">Behind</div><div class="v" style="color:${behind.cls==='neg'?'#fca5a5':'#e5e7eb'}">${escapeHtml(behind.text)}</div></div>
+      </div>
+
+      <div class="mDetail ${isOpen ? "open" : ""}">
+        ${detailsFor.map(x => `
+          <div class="raceCard">
+            <div class="raceHead">
+              <div class="raceTitle">
+                <div class="track">${escapeHtml(x.TRACK_NAME)}</div>
+                <div class="meta">Track ID: ${x.TRACK_ID}</div>
+              </div>
+              <div>
+                ${Number(x.WIN) === 1 ? `<span class="winGold"><span class="trophy">🏆</span>WIN</span>` : ``}
+              </div>
+            </div>
+
+            <div class="pick">Selection: <span class="selection">${escapeHtml(x.SELECTION)}</span></div>
+
+            <div class="raceGrid">
+              <div class="raceChip"><div class="k">Finish</div><div class="v">${x.FINISH_POSITION}</div></div>
+              <div class="raceChip"><div class="k">Points</div><div class="v">${x.POINTS_EARNED}</div></div>
+              <div class="raceChip"><div class="k">Top5</div><div class="v">${x.TOP5}</div></div>
+              <div class="raceChip"><div class="k">Top10</div><div class="v">${x.TOP10}</div></div>
+              <div class="raceChip"><div class="k">Led Lap</div><div class="v">${x.LED_LAP}</div></div>
+              <div class="raceChip"><div class="k">Most Led</div><div class="v">${x.LED_MOST}</div></div>
+            </div>
+          </div>
+        `).join("")}
+      </div>
+    `;
+
+    mList.appendChild(container);
+  }
+}
+
+function render(){
+  const filtered = getFilteredSortedStandings();
+  renderDesktopRows(filtered);
+  renderMobileList(filtered);
+}
+
+/** Sorting (desktop headers) */
 document.querySelectorAll("th.sortable").forEach(th => {
   th.addEventListener("click", () => {
     const key = th.getAttribute("data-key");
