--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fantasy NASCAR League — Standings</title>
+  <title>Fantasy NASCAR League — Standings TEST</title>
   <style>
     :root{
       --bg:#0b0e14;
@@ -878,3 +878,4 @@ render();
 </script>
 </body>
 </html>
+
